<resources>
    <string name="app_name"><b>My App Portfolio</b></string>
    <string name="action_settings">Settings</string>
    <string name="xyz_reader_text">XYZ READER</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="library_app">Library App</string>
    <string name="scores_app">Scores App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="my_app">capstone: my own app</string>
    <string name="title_text">My Nanodegree Apps!</string>
    <color name="purple">#CD0E3E</color>
    <color name="orange">#F08C35</color>
</resources>
